fixed legibility of bettery level

--- a/iGo/projeto/style.css
+++ b/iGo/projeto/style.css
@@ -62,9 +62,11 @@
 }
 
 #batteryLevel {
+    font-family: 'Courier New', Courier, monospace;
+    letter-spacing: 0.01cm;
     position: absolute;
     font-size: 0.2cm;
     color: white;
-    top: 0.36cm;
+    top: 0.38cm;
     right: 0.9cm;
 }
